--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/usr/bin/python3.8",
+    "python.pythonPath": "C:\\Users\\Joao\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
     "python.formatting.provider": "black"
 }
